@startuml

' Định nghĩa style
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

' Định nghĩa enum
enum UserRole {
    USER
    ADMIN
}

enum OrderStatus {
    PENDING
    PROCESSING
    DELIVERED
    CANCELLED
}

' Định nghĩa entities
entity "User" {
    *_id: ObjectId <<PK>>
    --
    email: String <<unique>>
    password: String
    firstName: String
    lastName: String
    phone: String
    address: String
    role: UserRole <<enum>>
    isActive: Boolean
    createdAt: Date
    updatedAt: Date
}

entity "Product" {
    *_id: ObjectId <<PK>>
    --
    *category: ObjectId <<FK>>
    name: String
    description: String
    price: Number
    stock: Number
    images: Array
    thumbnail: String
    isActive: Boolean
    discount: Number
    averageRating: Number
    createdAt: Date
    updatedAt: Date
}

entity "ProductCategory" {
    *_id: ObjectId <<PK>>
    --
    name: String <<unique>>
    description: String
    isActive: Boolean
    createdAt: Date
    updatedAt: Date
}

entity "Order" {
    *_id: ObjectId <<PK>>
    --
    *user: ObjectId <<FK>>
    items: Array
    totalAmount: Number
    status: OrderStatus <<enum>>
    shippingAddress: Object
    createdAt: Date
    updatedAt: Date
}

entity "Cart" {
    *_id: ObjectId <<PK>>
    --
    *user: ObjectId <<FK>>
    items: Array
}

entity "CartItem" {
    *_id: ObjectId <<PK>>
    --
    *cartId: ObjectId <<FK>>
    *productId: ObjectId <<FK>>
    quantity: Number
    createdAt: Date
    updatedAt: Date
}

entity "Rating" {
    *_id: ObjectId <<PK>>
    --
    *user: ObjectId <<FK>>
    *product: ObjectId <<FK>>
    rating: Number
    review: String
    createdAt: Date
}

entity "ChatConversation" {
    *_id: ObjectId <<PK>>
    --
    *userId: ObjectId <<FK>>
    participants: Array
    lastMessage: ObjectId <<FK>>
    createdAt: Date
    updatedAt: Date
}

entity "ChatMessage" {
    *_id: ObjectId <<PK>>
    --
    *conversation: ObjectId <<FK>>
    *sender: ObjectId <<FK>>
    content: String
    isRead: Boolean
    createdAt: Date
}

' Định nghĩa relationships chính
User ||--o{ Order : places
User ||--o| Cart : has
Product }o--|| ProductCategory : belongs_to
Cart ||--o{ CartItem : contains
CartItem }o--|| Product : refers_to
Product ||--o{ Rating : has
User ||--o{ Rating : gives
User ||--o{ ChatConversation : has
ChatConversation ||--o{ ChatMessage : contains
User ||--o{ ChatMessage : sends

' Định nghĩa relationships với enum
User .. UserRole
Order .. OrderStatus

@enduml 



